<resources>
    <string name="app_name">GestioneSpese Lite</string>
    <string name="widget_spese_name">Spese Widget</string>
    <string name="widget_ricavi_name">Ricavi Widget</string>
    <string name="service_name">Gestione Spese Notification</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start">Gestione Spese</string>
    <string name="title_activity_add_spese_ricavi">Aggiungi Voce Bilancio</string>
    <string name="title_activity_show_spese">ShowSpese</string>
    <string name="defaultString">Ciao</string>
    <string name="open">Open</string>
    <string name="googlePlay">Google Play</string>
    <string name="uninstall">Uninstall</string>
    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Settings</string>
    <string name="mode">Swipe Mode</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="leftAction">Left Action</string>
    <string name="reveal">Reveal</string>
    <string name="dismiss">Dismiss</string>
    <string name="choice">Choice</string>
    <string name="rightAction">Right Action</string>
    <string name="rightOffset">Right Offset (%1$s dp)</string>
    <string name="leftOffset">Left Offset (%1$s dp)</string>
    <string name="dp">dp</string>
    <string name="animationTime">Animation Time (Default: 0)</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="openOnLongPress">Open On Long Press</string>
    <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source SwipeListView Android Library by 47 Degrees. Find all source, documentation and packaged downloads at GitHub. Cheers!</string>
    <string name="ok">OK</string>
    <string name="visit47">Visit 47deg</string>
    <string name="goToGitHub">Go to GitHub</string>
    <string name="dontShow">Don\'t show this message again</string>
    <string name="others">Others</string>
    <string name="loading">Loading</string>
    <string name="newTag">New!</string>
    <string name="discard">Discard</string>
    <string name="aboutAltro">Altro da ARANDROID sul Play Store:</string>
    <string name="version">Lite</string>
    <string name="textOn">ON</string>
    <string name="textOff">OFF</string>
    <string name="accedi">Accedi</string>
    <string name="annulla">Annulla</string>
    <string name="mostra_password">Mostra Password</string>
    <string name="password_dimenticata">Hai dimenticato la password? Clicca qui!</string>
    <string name="data">Data:</string>
    <string name="data_min">data</string>
    <string name="inserisci_importo">Inserisci Importo:</string>
    <string name="zero_double">0.00</string>
    <string name="euro_simbol">€</string>
    <string name="tag">Tag</string>
    <string name="aggiungi_un_tag">Aggiungi un tag</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="ripeti">Ripeti:</string>
    <string name="ripeti_fra">Ripeti Fra:</string>
    <string name="reset">Reset</string>
    <string name="ultimo_mese">Ultimo Mese</string>
    <string name="visualizza_ultimo_a">Visualizza Ultimo/a:</string>
    <string name="dal">Dal:</string>
    <string name="al">Al:</string>
    <string name="grafici">Grafici</string>
    <string name="cosa_vuoi_vedere">COSA VUOI VEDERE?</string>
    <string name="grafico">Grafico:</string>
    <string name="esporta_il_resoconto">ESPORTA IL RESOCONTO</string>
    <string name="pdf">PDF</string>
    <string name="testo">Testo</string>
    <string name="excel">Excel</string>
    <string name="csv">CSV</string>
    <string name="separatore">Separatore</string>
    <string name="esporta">Esporta</string>
    <string name="giorni">Giorni</string>
    <string name="nessuna_voce_trovata">Nessuna voce trovata</string>
    <string name="tra">Tra</string>
    <string name="e">E</string>
    <string name="applica_filtro">Applica Filtro</string>
    <string name="reset_filtro">Reset Filtro</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="imposta_password">IMPOSTA UNA PASSWORD</string>
    <string name="proteggi_con_password">Proteggi con password:</string>
    <string name="password">Password:</string>
    <string name="inserisci">Inserisci</string>
    <string name="email">Email:</string>
    <string name="per_recupero">Per un eventuale recupero</string>
    <string name="gia_pratica">HAI GIA\&apos; FATTO PRATICA?</string>
    <string name="tutorial">Tutorial:</string>
    <string name="attiva_backup_automatico">ATTIVA IL BACKUP AUTOMATICO</string>
    <string name="backup_automatico">Backup Automatico:</string>
    <string name="ripeti_ogni">Ripeti ogni:</string>
    <string name="usa_stesso_file">Usa lo stesso file:</string>
    <string name="esporta_resoconto_generale">ESPORTA IL RESOCONTO GENERALE</string>
    <string name="non_dimenticarti_di_salvare">NON DIMENTICARTI DI SALVARE!</string>
    <string name="salva">Salva</string>
    <string name="duplica">Duplica</string>
    <string name="modifica">Modifica</string>
    <string name="elimina">Elimina</string>
    <string name="long_text">ScrollingTextViewScrollingTextViewScrollingTextViewScrollingTextView</string>
    <string name="tutti_i_tag">Tutti i Tag</string>
    <string name="importo">importo</string>
    <string name="schermata_bug">Schermata del bug:</string>
    <string name="descrizione_bug">Descrizione del bug:</string>
    <string name="segnala">Segnala</string>
    <string name="ricavi">Ricavi</string>
    <string name="spese">Spese</string>
    <string name="conferma">Conferma</string>
    <string name="posticipa">Posticipa</string>
    <string name="visualizza_tutti">Visualizza Tutti</string>
    <string name="giorno">Giorno</string>
    <string name="settimana">Settimana</string>
    <string name="mese">Mese</string>
    <string name="trimestre">Trimestre</string>
    <string name="semestre">Semestre</string>
    <string name="anno">Anno</string>
    <string name="biennio">Biennio</string>
    <string name="bilancio_totale">Bilancio Totale</string>
    <string name="mai">Mai</string>
    <string name="ogni_giorno">Ogni Giorno</string>
    <string name="ogni_settimana">Ogni Settimana</string>
    <string name="ogni_mese">Ogni Mese</string>
    <string name="ogni_bimestre">Ogni Bimestre</string>
    <string name="ogni_trimestre">Ogni Trimestre</string>
    <string name="ogni_semestre">Ogni Semestre</string>
    <string name="ogni_anno">Ogni Anno</string>
    <string name="ogni_biennio">Ogni Biennio</string>
    <string name="personalizzato">Personalizzato</string>
    <string name="bilancio">Bilancio</string>
    <string name="andamento_bilancio">Andamento Bilancio</string>
    <string name="home">Home</string>
    <string name="aggiungi_nuova_spesa">Aggiungi Nuova Spesa</string>
    <string name="aggiungi_nuovo_ricavo">Aggiungi Nuovo Ricavo</string>
    <string name="riepilogo_spese">Riepilogo Spese</string>
    <string name="riepilogo_ricavi">Riepilogo Ricavi</string>
    <string name="bilanci">Bilanci</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="nuova_spesa">Nuova Spesa</string>
    <string name="nuovo_ricavo">Nuovo Ricavo</string>
    <string name="gestione_db">Gestione DB</string>
    <string name="aggiungi_almeno_una_spesa">Aggiungi almeno una spesa</string>
    <string name="aggiungi_almeno_un_ricavo">Aggiungi almeno un ricavo</string>
    <string name="nessuna_voce_di_bilancio_trovata">Nessuna voce di bilancio trovata</string>
    <string name="inserimento_avvenuto_con_successo">Inserimento avvenuto con successo</string>
    <string name="errore_nell_inserimento_dei_dati">Errore nell\'inserimento dei dati</string>
    <string name="inserire_un_numero_diverso_da_zero">Inserire un numero diverso da zero</string>
    <string name="periodo_personalizzato">Periodo Personalizzato</string>
    <string name="programma">Programma</string>
    <string name="imposta_data_inizio_fine">Imposta una data di inizio precedente a quella di fine</string>
    <string name="imposta_data_fine_inizio">Imposta una data di fine successiva a quella di inizio</string>
    <string name="classico">CLASSICO</string>
    <string name="personalizzato_uc">PERSONALIZZATO</string>
    <string name="bilancio_personalizzato">Bilancio Personalizzato</string>
    <string name="bilancio_giornaliero">Bilancio Giornaliero</string>
    <string name="bilancio_settimanale">Bilancio Settimanale</string>
    <string name="bilancio_mensile">Bilancio Mensile</string>
    <string name="bilancio_trimestrale">Bilancio Trimestrale</string>
    <string name="bilancio_semestrale">Bilancio Semestrale</string>
    <string name="bilancio_annuale">Bilancio Annuale</string>
    <string name="bilancio_biennale">Bilancio Biennale</string>
    <string name="bilancio_column">Bilancio: </string>
    <string name="spese_column">Spese: </string>
    <string name="ricavi_column">Ricavi: </string>
    <string name="grafico_non_supportato">Grafico  non supportato per il periodo selezionato</string>
    <string name="attenzione_nessun_file_selezionato">Attenzione! Nessun file selezionato!</string>
    <string name="esportazione_successo">Esportazione avvenuta con successo</string>
    <string name="errore_esportazione_dati">Errore nell\'esportazione dei dati</string>
    <string name="settimane">Settimane</string>
    <string name="mesi">Mesi</string>
    <string name="password_troppo_corta">Password troppo corta</string>
    <string name="email_non_corretta">Email Non Corretta</string>
    <string name="inserisci_valore_valido">Inserisci un valore valido nel campo testo</string>
    <string name="inserisci_valore">Inserisci un valore nel campo testo</string>
    <string name="spese_recenti">Spese Recenti</string>
    <string name="ricavi_recenti">Ricavi Recenti</string>
    <string name="password_errata">La password inserita e\' errata</string>
    <string name="password_inviata_email">Ti è stata inviata la password all\'indirizzo email da te fornito</string>
    <string name="database_resettato">Database resettato</string>
    <string name="data_uc_column_space">DATA: </string>
    <string name="importo_uc_column_space">IMPORTO: </string>
    <string name="tag_uc_column_space">TAG: </string>
    <string name="voce_programmata_scaduta">Voce Programmata Scaduta</string>
    <string name="controllare_importi">Controllare gli importi inseriti</string>
    <string name="ricavi_programmati">Ricavi Programmati</string>
    <string name="spese_programmate">Spese Programmate</string>
    <string name="filtra_per_data">Filtra Per Data</string>
    <string name="filtra_per_tag">Filtra Per Tag</string>
    <string name="filtra_per_importo">Filtra Per Importo</string>
    <string name="hai_effettuato_spesa">Hai effettuato questa spesa?</string>
    <string name="hai_ottenuto_ricavo">Hai ottenuto questo ricavo?</string>
    <string name="periodo">Periodo </string>
    <string name="periodi">Periodi</string>
    <string name="carica_altri">Carica Altri</string>
    <string name="rimozione_avvenuta_con_successo">Rimozione avvenuta con successo</string>
    <string name="errore_rimozione_dati">Errore nella rimozione dei dati</string>
    <string name="vuoi_eliminare_voce_programmata">Vuoi eliminare anche la voce programmata?</string>
    <string name="backup_effettuato_in">Backup effettuato in sdcard/gestionespese!</string>
    <string name="restore_effettuato">Restore effettuato!</string>
    <string name="casa">casa</string>
    <string name="affitto">affitto</string>
    <string name="contanti">contanti</string>
    <string name="bancomat">bancomat</string>
    <string name="alimentari">alimentari</string>
    <string name="rata">rata</string>
    <string name="tecnologia">tecnologia</string>
    <string name="abbigliamento">abbigliamento</string>
</resources>