<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    android:layout_marginTop="10dp" >

    <TextView
        android:id="@+id/tagText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tra" />

    <EditText
        android:id="@+id/minImporto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/zero_double" >

    </EditText>

    <TextView
        android:id="@+id/pwLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e" />

    <EditText
        android:id="@+id/maxImporto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/zero_double"/>

</LinearLayout>
