<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gestionedblayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3" >

    <LinearLayout
        android:id="@+id/backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/db_dialog_button_blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/defaultString"
            android:src="@drawable/databackup" />

        <TextView
            style="@style/DBManager_Titles"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/backup" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/db_dialog_button_blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/defaultString"
            android:src="@drawable/datarestore" />

        <TextView
            style="@style/DBManager_Titles"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/restore" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/db_dialog_button_blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/defaultString"
            android:src="@drawable/datareset" />

        <TextView
            style="@style/DBManager_Titles"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/reset" />
    </LinearLayout>

</LinearLayout>