<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/nuova_spesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/background_main_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/defaultString"
            android:src="@drawable/nuova_spesa" />

        <TextView
            style="@style/NewItemTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/nuova_spesa" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nuovo_ricavo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_main_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/defaultString"
            android:src="@drawable/nuovo_ricavo" />

        <TextView
            style="@style/NewItemTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/nuovo_ricavo" />
    </LinearLayout>
    

</LinearLayout>
