<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/rowBack"
        style="@style/ListBackContentConfronti"
        android:tag="back" >

        <Button
            android:id="@+id/modifica"
            style="@style/ListButtonAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifica" />

        <Button
            android:id="@+id/elimina"
            style="@style/ListButtonAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elimina" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowFront"
        style="@style/ListFrontContentConfronti"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/rowTitle"
            style="@style/ListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultimo_mese" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/speseTV"
                style="@style/ListSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultString" />

            <ImageView
                android:id="@+id/speseShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/aiuto_border_white2"
                android:contentDescription="@string/defaultString"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:src="@drawable/aiuto_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/ricaviTV"
                style="@style/ListSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultString"/>

            <ImageView
                android:id="@+id/ricaviShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/aiuto_border_white2"
                android:contentDescription="@string/defaultString"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:src="@drawable/aiuto_white" />
        </LinearLayout>

        <TextView
            android:id="@+id/bilancioTV"
            style="@style/ListSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultString" />
    </LinearLayout>

</FrameLayout>